Подключены все фильтры

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,3 +1,4 @@
 1.0.1: Выбор хайлайтера. Создание структуры плагина.
 1.0.2: Описание. Выбор темы в компоненте.
 1.0.3: Добавлен фильтр Twig.
+1.0.4: Подключены все имеющиесы фильтры.
