Кнопки в Markdown Editor. Скрипт typofilter.js

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,4 +1,5 @@
 1.0.1: Выбор хайлайтера. Создание структуры плагина.
 1.0.2: Описание. Выбор темы в компоненте.
 1.0.3: Добавлен фильтр Twig.
-1.0.4: Подключены все имеющиесы фильтры.
+1.0.4: Подключены все имеющиеся фильтры.
+1.0.5: Кнопки в Markdown Editor. Скрипт typofilter.js
